--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "@angular/compiler": "~6.1.0",
     "@angular/core": "~6.1.0",
     "@angular/forms": "~6.1.0",
-    "@angular/http": "^5.0.0",
+    "@angular/http": "~6.1.0",
     "@angular/platform-browser": "~6.1.0",
     "@angular/platform-browser-dynamic": "~6.1.0",
     "@angular/router": "~6.1.0",
-    "core-js": "2.5.1",
+    "core-js": "~2.5.1",
     "rxjs": "~6.2.0",
-    "zone.js": "0.8.20"
+    "zone.js": "~0.8.20"
   },
   "version": "0.0.0",
   "license": "MIT",
@@ -32,19 +32,8 @@
     "@angular/cli": "~6.1.0",
     "@angular/compiler-cli": "~6.1.0",
     "@angular/language-service": "~6.1.0",
-    "@types/jasmine": "~2.5.53",
-    "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "codelyzer": "~3.0.1",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
     "typescript": "~2.9.2"
